<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/xfunc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha=".6"
        android:background="@drawable/btn3_bg_sm"
        android:paddingTop="7dp"
        android:text="@string/contrast_min"
        android:textAlignment="center"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/xfunc" />

    <LinearLayout
        android:id="@+id/jump_and_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:alpha=".6"
        android:background="@drawable/btn2_bg_sm"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/proofread_end"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView64"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_error"
            android:textAlignment="center"
            android:textSize="8sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView68"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jump_to"
            android:textAlignment="center"
            android:textSize="10sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView69"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="8sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/skip_misc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha=".6"
        android:background="@drawable/btn2_bg_sm"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/proofread_end">

        <TextView
            android:id="@+id/textView74"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_neuron"
            android:textAlignment="center"
            android:textSize="8sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView78"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textAlignment="center"
            android:textSize="10sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView79"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textAlignment="center"
            android:textSize="8sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/extend_branch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:alpha=".6"
        android:background="@drawable/btn2_bg_sm"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/proofread_end"
        app:layout_constraintEnd_toStartOf="@+id/jump_and_report">

        <TextView
            android:id="@+id/textView44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extend"
            android:textAlignment="center"
            android:textSize="8sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textAlignment="center"
            android:textSize="10sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/branch"
            android:textAlignment="center"
            android:textSize="8sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/repo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:alpha=".6"
        android:freezesText="true"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:alpha=".2"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/model_prog"
        style="@android:style/Widget.Material.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/img_progr"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/model_prog" />

    <TextView
        android:id="@+id/cursor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".6"
        android:background="@drawable/cursor_bg_sm"
        android:paddingTop="1dp"
        android:text="@string/cursor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:alpha=".6"
        android:background="@drawable/btn_bg_sm"
        android:paddingTop="16dp"
        android:text="@string/rotate"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/cursor"
        app:layout_constraintStart_toEndOf="@+id/zoom" />

    <TextView
        android:id="@+id/zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:alpha=".6"
        android:background="@drawable/btn3_bg_sm"
        android:paddingTop="8dp"
        android:text="@string/zoom"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/cursor"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/proofread_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:alpha=".6"
        android:background="@drawable/btn2_bg_sm"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/skip_misc"
        app:layout_constraintEnd_toEndOf="@+id/extend_branch">

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proofread"
            android:textAlignment="center"
            android:textSize="8sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textAlignment="center"
            android:textSize="10sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_as"
            android:textAlignment="center"
            android:textSize="8sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/xfunc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:alpha=".6"
        android:background="@drawable/btn_bg_sm"
        android:paddingTop="16dp"
        android:text="@string/contrast"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/skip_misc" />

    <TextView
        android:id="@+id/data_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:alpha=".6"
        android:background="@drawable/btn_bg_sm"
        android:paddingTop="16dp"
        android:text="@string/data_only"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/proofread_end" />

    <TextView
        android:id="@+id/xfunc_val0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/xfunc2"
        app:layout_constraintStart_toStartOf="@+id/xfunc2" />

    <TextView
        android:id="@+id/xfunc_val1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/xfunc"
        app:layout_constraintStart_toStartOf="@+id/xfunc" />

</androidx.constraintlayout.widget.ConstraintLayout>
